--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,8 +5,10 @@
     android:versionCode="1"
     android:versionName="0.1">
 
-    <uses-sdk android:minSdkVersion="8" />
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="21"/>
 
-    <application />
+    <application/>
 
 </manifest>
