--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-    xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <!--
@@ -18,7 +16,7 @@
 
     <groupId>com.vincestyling.asqliteplus</groupId>
     <artifactId>asqliteplus</artifactId>
-    <version>0.2-SNAPSHOT</version>
+    <version>0.2</version>
     <packaging>jar</packaging>
 
     <name>aSQLite+</name>
@@ -30,7 +28,7 @@
         <connection>scm:git:git@github.com:vince-styling/aSQLitePlus-android.git</connection>
         <developerConnection>scm:git:git@github.com:vince-styling/aSQLitePlus-android.git</developerConnection>
         <url>git@github.com:vince-styling/aSQLitePlus-android.git</url>
-        <tag>HEAD</tag>
+        <tag>asqliteplus-0.2</tag>
     </scm>
 
     <developers>
