--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
     <groupId>com.vincestyling.asqliteplus</groupId>
     <artifactId>asqliteplus</artifactId>
-    <version>0.2</version>
+    <version>0.3-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>aSQLite+</name>
@@ -28,7 +28,7 @@
         <connection>scm:git:git@github.com:vince-styling/aSQLitePlus-android.git</connection>
         <developerConnection>scm:git:git@github.com:vince-styling/aSQLitePlus-android.git</developerConnection>
         <url>git@github.com:vince-styling/aSQLitePlus-android.git</url>
-        <tag>asqliteplus-0.2</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
